// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Options Sourcemap should work Sourcemap - {Boolean}: css 1`] = `
"a { color: rgba(255, 0, 0, 1.0) }
"
`;

exports[`Options Sourcemap should work Sourcemap - {Boolean}: errors 1`] = `Array []`;

exports[`Options Sourcemap should work Sourcemap - {Boolean}: map 1`] = `
Object {
  "file": "x",
  "mappings": "AAAA,IAAI,4BAAa",
  "names": Array [],
  "sources": Array [
    "xxx",
  ],
  "sourcesContent": Array [
    "a { color: black }
",
  ],
  "version": 3,
}
`;

exports[`Options Sourcemap should work Sourcemap - {Boolean}: warnings 1`] = `Array []`;

exports[`Options Sourcemap should work Sourcemap - {String}: css 1`] = `
"a { color: rgba(255, 0, 0, 1.0) }

/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInRlc3QvZml4dHVyZXMvY3NzL3N0eWxlLmNzcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFBQSxJQUFJLDRCQUFhIiwiZmlsZSI6InRlc3QvZml4dHVyZXMvY3NzL3N0eWxlLmNzcyIsInNvdXJjZXNDb250ZW50IjpbImEgeyBjb2xvcjogYmxhY2sgfVxuIl19 */"
`;

exports[`Options Sourcemap should work Sourcemap - {String}: errors 1`] = `Array []`;

exports[`Options Sourcemap should work Sourcemap - {String}: warnings 1`] = `Array []`;

exports[`Options Sourcemap should work disable Sourcemap - {Boolean}: css 1`] = `
"a { color: rgba(255, 0, 0, 1.0) }
"
`;

exports[`Options Sourcemap should work disable Sourcemap - {Boolean}: errors 1`] = `Array []`;

exports[`Options Sourcemap should work disable Sourcemap - {Boolean}: warnings 1`] = `Array []`;

exports[`Options Sourcemap should work with prev sourceMap: css 1`] = `
"a {
  color: coral;
}"
`;

exports[`Options Sourcemap should work with prev sourceMap: errors 1`] = `Array []`;

exports[`Options Sourcemap should work with prev sourceMap: map 1`] = `
Object {
  "file": "x",
  "mappings": "AAAA;EAAI,YAAA;ACEJ",
  "names": Array [],
  "sources": Array [
    "xxx",
    "xxx",
  ],
  "sourcesContent": Array [
    "a { color: coral }
",
    "a {
  color: coral;
}",
  ],
  "version": 3,
}
`;

exports[`Options Sourcemap should work with prev sourceMap: warnings 1`] = `Array []`;
